force-app/main/default/objects/Deal_Draft__c/Deal_Draft__c.object-meta.xml
<CustomObject>
    <description>This object is a child object to Deal and provides details for the deal provided by the BDM and also &quot;proofed content&quot; for Product Analysts which are then used by Publishers.

This includes information for both AU and NZ</description>
    <label>Deal Draft</label>
    <nameField>
        <label>Deal Draft Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Drafts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>