force-app/main/default/objects/Deal_Draft__c/fields/Badges__c.field-meta.xml
<CustomField>
    <fullName>Badges__c</fullName>
    <label>Badges</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>type -quality</fullName>
            </value>
            <value>
                <fullName>type -premium</fullName>
            </value>
            <value>
                <fullName>type -5 star</fullName>
            </value>
            <value>
                <fullName>type -5 star luxury</fullName>
            </value>
            <value>
                <fullName>type -home stay</fullName>
            </value>
            <value>
                <fullName>type -speciality</fullName>
            </value>
            <value>
                <fullName>type -heritage</fullName>
            </value>
            <value>
                <fullName>type -lodge</fullName>
            </value>
            <value>
                <fullName>type -boutique hotel</fullName>
            </value>
            <value>
                <fullName>type -resort</fullName>
            </value>
            <value>
                <fullName>alternatives-deluxe</fullName>
            </value>
            <value>
                <fullName>alternatives-luxury</fullName>
            </value>
            <value>
                <fullName>alternatives-superior</fullName>
            </value>
            <value>
                <fullName>star ratings-5 star</fullName>
            </value>
            <value>
                <fullName>star ratings-5 star cruise</fullName>
            </value>
            <value>
                <fullName>star ratings-4-5 star</fullName>
            </value>
            <value>
                <fullName>star ratings-4-5 star cruise</fullName>
            </value>
            <value>
                <fullName>star ratings-4.5 star</fullName>
            </value>
            <value>
                <fullName>star ratings-4 star cruise</fullName>
            </value>
            <value>
                <fullName>star ratings-4 star</fullName>
            </value>
            <value>
                <fullName>star ratings-5 star luxury</fullName>
            </value>
            <value>
                <fullName>specialty-luxury</fullName>
            </value>
            <value>
                <fullName>specialty-premium airlines</fullName>
            </value>
            <value>
                <fullName>specialty-boutique hotels</fullName>
            </value>
            <value>
                <fullName>specialty-premium hotel</fullName>
            </value>
            <value>
                <fullName>specialty-hotel included</fullName>
            </value>
            <value>
                <fullName>specialty-new hotel</fullName>
            </value>
            <value>
                <fullName>specialty-new cruise ship</fullName>
            </value>
            <value>
                <fullName>specialty-luxury cruise</fullName>
            </value>
            <value>
                <fullName>experience-cultural tour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>