force-app/main/default/objects/Deal_Draft__c/fields/BNCDL__c.field-meta.xml
<CustomField>
    <fullName>BNCDL__c</fullName>
    <label>BNCDL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>