force-app/main/default/objects/Deal_Draft__c/fields/built_in_stop_over__c.field-meta.xml
<CustomField>
    <fullName>built_in_stop_over__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you have a Stop Over built into your deal as part of the standard itinerary, please check this box.</inlineHelpText>
    <label>Built In Stop Over</label>
    <type>Checkbox</type>
</CustomField>