force-app/main/default/objects/Deal_Draft__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <inlineHelpText>Please provide an update on the contract status with the merchant/s.</inlineHelpText>
    <label>Contract Status</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>