force-app/main/default/objects/Deal_Draft__c/fields/Contract_Status_NZ__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status_NZ__c</fullName>
    <label>Contract Status - NZ</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>