force-app/main/default/objects/Deal_Draft__c/fields/Cruise_Cabin_Allocation_Status__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Cabin_Allocation_Status__c</fullName>
    <formula>Text( Deal__r.Cruise_Cabin_Allocation_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is populated from the &quot;Cruise Cabin Allocation Status&quot; field on the related Deal.</inlineHelpText>
    <label>Cruise Cabin Allocation Status</label>
    <type>Text</type>
</CustomField>