force-app/main/default/objects/Deal_Draft__c/fields/Cruise_Cabin_Allocation_Status_NZ__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Cabin_Allocation_Status_NZ__c</fullName>
    <label>Cruise Cabin Allocation Status - NZ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>