force-app/main/default/objects/Deal_Draft__c/fields/Cruise_Cabin_Booked_By__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Cabin_Booked_By__c</fullName>
    <formula>TEXT(Deal__r.Cruise_Cabin_Booked_by__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is populated from the &quot;Cruise Cabin Booked By&quot; field on the related deal.</inlineHelpText>
    <label>Cruise Cabin Booked By</label>
    <type>Text</type>
</CustomField>