force-app/main/default/objects/Deal_Draft__c/fields/Dates_Allocations__c.field-meta.xml
<CustomField>
    <fullName>Dates_Allocations__c</fullName>
    <inlineHelpText>This field is to be updated by BMDs to outline the key information for dates and allocations for the deal. Product Analysts will use this information to complete the relevant sections of the deal wizard.</inlineHelpText>
    <label>Dates &amp; Allocations</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>