force-app/main/default/objects/Deal_Draft__c/fields/Dates_Allocations_Proofed__c.field-meta.xml
<CustomField>
    <fullName>Dates_Allocations_Proofed__c</fullName>
    <label>Deal Opt / Logistics / Dates-alloc.</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>