force-app/main/default/objects/Deal_Draft__c/fields/Deal_Options_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Deal_Options_Pricing__c</fullName>
    <inlineHelpText>This is for the BDM to include the details regarding deal options and pricing that the Product Analyst can use to further complete the deal wizard.</inlineHelpText>
    <label>Deal Options &amp; Pricing</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>