force-app/main/default/objects/Deal_Draft__c/fields/Deal_Options_Pricing_NZ__c.field-meta.xml
<CustomField>
    <fullName>Deal_Options_Pricing_NZ__c</fullName>
    <label>Deal Options &amp; Pricing - NZ</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>