force-app/main/default/objects/Deal_Draft__c/fields/Does_Solo_Check_Need_To_Be_Ticked__c.field-meta.xml
<CustomField>
    <fullName>Does_Solo_Check_Need_To_Be_Ticked__c</fullName>
    <inlineHelpText>Please indicate if 2 x alloc. need to be taken per date if Solo Traveller is selected - Yes or No</inlineHelpText>
    <label>Does &apos;Solo Check&apos; Need To Be Ticked?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>