force-app/main/default/objects/Deal_Draft__c/fields/General_Cancellation_Policy__c.field-meta.xml
<CustomField>
    <fullName>General_Cancellation_Policy__c</fullName>
    <defaultValue>&quot;From X days to X days before arrival Type of Refund&quot;</defaultValue>
    <label>General Cancellation Policy</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>