force-app/main/default/objects/Deal_Draft__c/fields/Highlights_Summary__c.field-meta.xml
<CustomField>
    <fullName>Highlights_Summary__c</fullName>
    <inlineHelpText>Summary of your highlights in order of IMPORTANCE, not chronological. This will guide the Publishers on Ad Copy</inlineHelpText>
    <label>Highlights Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>