force-app/main/default/objects/Deal_Draft__c/fields/How_would_you_like_Min_Numbers_managed__c.field-meta.xml
<CustomField>
    <fullName>How_would_you_like_Min_Numbers_managed__c</fullName>
    <inlineHelpText>You can nominate min numbers to be met based on sales on an individual departure date record, or by an allocation table/pool, or by a customer min number manager.</inlineHelpText>
    <label>How would you like Min Numbers managed?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>