force-app/main/default/objects/Deal_Draft__c/fields/Important_Information_NZ__c.field-meta.xml
<CustomField>
    <fullName>Important_Information_NZ__c</fullName>
    <label>Important Information - NZ</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>