force-app/main/default/objects/Deal_Draft__c/fields/Important_Information_Proofed__c.field-meta.xml
<CustomField>
    <fullName>Important_Information_Proofed__c</fullName>
    <label>Important Information - Proofed</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>