force-app/main/default/objects/Deal_Draft__c/fields/Inclusions_Outline__c.field-meta.xml
<CustomField>
    <fullName>Inclusions_Outline__c</fullName>
    <inlineHelpText>This is for the BDMs to provide an outline of the itinerary for the deal which will be further refined by the Content and Publishing team.</inlineHelpText>
    <label>Inclusions Outline</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>