force-app/main/default/objects/Deal_Draft__c/fields/Inclusions_Outline_Proofed__c.field-meta.xml
<CustomField>
    <fullName>Inclusions_Outline_Proofed__c</fullName>
    <label>Inclusions Outline - Proofed</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>