force-app/main/default/objects/Deal_Draft__c/fields/Itinerary_About_Property__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_About_Property__c</fullName>
    <inlineHelpText>Please provide a detailed outline of the summary which the publishing team will expand on.</inlineHelpText>
    <label>Itinerary &amp; About Property</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>