force-app/main/default/objects/Deal_Draft__c/fields/Itinerary_About_Property_NZ__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_About_Property_NZ__c</fullName>
    <label>Itinerary &amp; About Property - NZ</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>