force-app/main/default/objects/Deal_Draft__c/fields/Itinerary_Outline_Abt_Propty_Proofed__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Outline_Abt_Propty_Proofed__c</fullName>
    <label>Itinerary Outline &amp; Abt Propty - Proofed</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>