force-app/main/default/objects/Deal_Draft__c/fields/Itinerary_Outline_Abt_Pty_Proofed_NZ__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Outline_Abt_Pty_Proofed_NZ__c</fullName>
    <label>Itinerary Outline &amp; Abt Pty - Proofed-NZ</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>