force-app/main/default/objects/Deal_Draft__c/fields/Lead_in_percentage__c.field-meta.xml
<CustomField>
    <fullName>Lead_in_percentage__c</fullName>
    <formula>Deal__r.Lead_In__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is populated from the &quot;Lead-in %&quot; field from the related Deal.</inlineHelpText>
    <label>Lead-in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>