force-app/main/default/objects/Deal_Draft__c/fields/Lead_In_Typically_Price_NZ__c.field-meta.xml
<CustomField>
    <fullName>Lead_In_Typically_Price_NZ__c</fullName>
    <label>Lead In Typically Price - NZ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>