force-app/main/default/objects/Deal_Draft__c/fields/Logistics_Information__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Information__c</fullName>
    <inlineHelpText>This is for BDMs to enter any relevant logistics information for the deal. This will be further updated by the Product Analyst and refined with the Logistics Team.</inlineHelpText>
    <label>Logistics Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>