force-app/main/default/objects/Deal_Draft__c/fields/Logistics_Sharing_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Sharing_Deadline__c</fullName>
    <inlineHelpText>Please include here the details regarding the logistics sharing for merchants.</inlineHelpText>
    <label>Logistics Sharing Deadline</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>