force-app/main/default/objects/Deal_Draft__c/fields/Logos__c.field-meta.xml
<CustomField>
    <fullName>Logos__c</fullName>
    <label>Logos</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>