force-app/main/default/objects/Deal_Draft__c/fields/Main_reason_customer_will_buy_this_deal__c.field-meta.xml
<CustomField>
    <fullName>Main_reason_customer_will_buy_this_deal__c</fullName>
    <inlineHelpText>If you had 10 seconds to sell this deal to someone, what would you tell them? Outline the two main reasons this deal is different to any other deals?</inlineHelpText>
    <label>Main reason customer will buy this deal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>