force-app/main/default/objects/Deal_Draft__c/fields/Marketing_Brief__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Brief__c</fullName>
    <inlineHelpText>Countries visited?
Top 3 highlights?
What makes it different to previous deals to this destination?
Our competitive advantage?
Iconic image or scene to sum up this trip?
Imagine you’re the customer and had just returned - what is your feedback</inlineHelpText>
    <label>Marketing Brief</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>