force-app/main/default/objects/Deal_Draft__c/fields/Marketing_Brief_NZ__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Brief_NZ__c</fullName>
    <label>Marketing Brief - NZ</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>