force-app/main/default/objects/Deal_Draft__c/fields/Merchant_Deadlines_for_Deal__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Deadlines_for_Deal__c</fullName>
    <label>Merchant Deadlines for Deal</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>