force-app/main/default/objects/Deal_Draft__c/fields/Merchants_Deadlines_for_Deal_NZ__c.field-meta.xml
<CustomField>
    <fullName>Merchants_Deadlines_for_Deal_NZ__c</fullName>
    <label>Merchants Deadlines for Deal - NZ</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>