force-app/main/default/objects/Deal_Draft__c/fields/Mini_Stress_Test__c.field-meta.xml
<CustomField>
    <fullName>Mini_Stress_Test__c</fullName>
    <inlineHelpText>This is a field for BDMs to detail their test of the TAD deal versus similar competitor deals. A further stress test is completed by Product Analysts further into the deal wizard.</inlineHelpText>
    <label>Mini Stress-Test</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>