force-app/main/default/objects/Deal_Draft__c/fields/Mini_Stress_Test_NZ__c.field-meta.xml
<CustomField>
    <fullName>Mini_Stress_Test_NZ__c</fullName>
    <label>Mini Stress-Test-NZ</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>