force-app/main/default/objects/Deal_Draft__c/fields/Miscellaneous_Information_NZ__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Information_NZ__c</fullName>
    <inlineHelpText>This is for the BDM to enter in any extra information relevant to be shared with the teams to build out the deal.</inlineHelpText>
    <label>Miscellaneous Information - NZ</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>