force-app/main/default/objects/Deal_Draft__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>