force-app/main/default/objects/Deal_Draft__c/fields/Nett_Rates_Detail__c.field-meta.xml
<CustomField>
    <fullName>Nett_Rates_Detail__c</fullName>
    <inlineHelpText>This is for the BDM to complete the details for the nett rates that will be further broken down in the pricing section of the deal wizard.</inlineHelpText>
    <label>Nett Rates Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>