force-app/main/default/objects/Deal_Draft__c/fields/Nett_Rates_Detail_NZ__c.field-meta.xml
<CustomField>
    <fullName>Nett_Rates_Detail_NZ__c</fullName>
    <label>Nett Rates Detail - NZ</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>