force-app/main/default/objects/Deal_Draft__c/fields/PAF_Flight_Request_NZ__c.field-meta.xml
<CustomField>
    <fullName>PAF_Flight_Request_NZ__c</fullName>
    <externalId>true</externalId>
    <label>PAF Flight Request # - NZ</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>