force-app/main/default/objects/Deal_Draft__c/fields/Payment_Terms_NZ__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_NZ__c</fullName>
    <label>Payment Terms - NZ</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>