force-app/main/default/objects/Deal_Draft__c/fields/Which_Partner_is_booking_cruise__c.field-meta.xml
<CustomField>
    <fullName>Which_Partner_is_booking_cruise__c</fullName>
    <inlineHelpText>Please list the merchant partner who is booking the cruise.</inlineHelpText>
    <label>Which Partner is booking cruise?</label>
    <type>TextArea</type>
</CustomField>